k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-resume-service
spec:
  type: ClusterIP
  selector:
    app: cloud-resume-api
  ports:
    - protocol: TCP
      port: 80 # Puerto del servicio
      targetPort: 3000 # Puerto del contenedor
