k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-resume-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - host: api1.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-resume-service
            port:
              number: 80
  - host: api2.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-resume-service
            port:
              number: 80
